Добавлен хендлер для получения количества алертов для инцидента по incident_id
